--- a/docker-ellk/logstash-conf/logstash.conf
+++ b/docker-ellk/logstash-conf/logstash.conf
@@ -4,7 +4,29 @@ input {
     codec => json
     type  => "dockerlogs"
   }
-  
+}
+ 
+filter { 
+  if [type] == "dockerlogs" {
+    if ([message] =~ "^\tat ") {
+      drop {}
+    }
+ 
+    grok {
+      break_on_match => false
+      match => [ "message", " responded with %{NUMBER:status_code:int}" ]
+      tag_on_failure => []
+    }
+ 
+    grok {
+      break_on_match => false
+      match => [ "message", " in %{NUMBER:response_time:int}ms" ]
+      tag_on_failure => []
+    }
+  }
+}
+ 
 output {
-  elasticsearch { protocol => "http" }
+  elasticsearch { host => localhost }
+  stdout { codec => rubydebug }
 }
