--- a/docker-ellk/logstash-conf/logstash.conf
+++ b/docker-ellk/logstash-conf/logstash.conf
@@ -27,6 +27,6 @@ filter {
 }
  
 output {
-  elasticsearch { host => localhost }
+  elasticsearch { host => "elasticsearch" }
   stdout { codec => rubydebug }
 }
